<resources>
    <string name="app_name">QRSCAN</string>
    <string name="title_app">DISCOVER QRSCAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">DISCOVER\n</string>
    <string name="qrscan">QRSCAN</string>
    <string name="onboard1subtitle">More than 10 types supported:\nQR Code, Barcode, Business Cards Documents, etc.</string>
    <string name="onboard1title"> QR code Barcode </string>
    <string name="skip"> SKIP </string>
    <string name="next"> NEXT </string>
    <string name="onboard2title">Create QR Code</string>
    <string name="onboard2subtitle"> Links, PDF, Images, vCards,\nLocation, Wifi more</string>
    <string name="onboard3title">Share to your friends</string>
    <string name="onboard3subtitle">Send information from the code to\nyour friends easily quickly</string>
    <string name="setting">Setting</string>
    <string name="generalsetting">General Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="subtitle_vibrate">Vibrate when scan successful</string>
    <string name="beep">Beep\n</string>
    <string name="subtitle_beep">Beep when scan successful</string>
    <string name="history">History</string>
    <string name="subtitle_history">Save history for your scan</string>
    <string name="scan">Scan Barcode Automatically</string>
    <string name="subtitle_scan">Take longer time when scaning</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="support">Support</string>
    <string name="share_with_friend">Share with your friends</string>
    <string name="rate_app">Rate app</string>
    <string name="feeaback">Feedback</string>
    <string name="privacy">Privacy Policy</string>
    <string name="nopermission">No camera permission</string>
    <string name="notiflash">Device dose not support flash </string>
    <string name="not_image">Can not found image</string>
    <string name="history_title">HISTORY</string>
    <string name="history_subtitle">QR Code Scanner</string>
    <string name="emptyhistory">You have not scanned\nany code before!</string>
    <string name="scannow">SCAN NOW!</string>
    <string name="createdin">Created in</string>
    <string name="name_example">Mies phone</string>

    <string name="createnow">CREATE NOW!</string>
    <string name="emptygenerate">You have not generated\nany code before!</string>
    <string name="generate_title">CREATE QR CODE</string>
    <string name="generate_subtitle">QR Code Generator</string>
    <string name="create">Create</string>
    <string name="createtitle">QR CODE</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="url">Url</string>
    <string name="sms">Sms</string>
    <string name="contact">Contact</string>
    <string name="text">Text</string>
    <string name="wifi">Wifi</string>
    <string name="calendar">Calendar</string>
    <string name="location">Location</string>
    <string name="barcode">BAR CODE</string>
    <string name="code39">Code 39</string>
    <string name="free">Free</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="createa">CREATE</string>
    <string name="generatesuccess">Generate Successfull!</string>
    <string name="qrcode">QR CODE</string>
    <string name="example">25th Dec, 2020</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="examplesubtitle">Subtitle example here</string>
    <string name="text_title">Text:</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="action">Action</string>
    <string name="openwithcalendar">Open with calendar</string>
    <string name="copytext">Copy text</string>
    <string name="connettonetwork">Connect to network</string>
    <string name="openinbrowser">Open in browser</string>
    <string name="addtocontact">Add to contact</string>
    <string name="sendsms">Send SMS</string>
    <string name="openmap">Open Map</string>
    <string name="call">Call</string>
    <string name="sendmail">Send Mail</string>
    <string name="sendfeeback">SEND FEEDBACK</string>
    <string name="thank">Thank your FeedBack!</string>
    <string name="later">Later</string>
    <string name="send_rate">Send Rate</string>
    <string name="please_rate_us">Please give us a rating!</string>
    <string name="what_do_you_think_about_app">What do you think about app</string>
    <string name="link">http:/........</string>
    <string name="shareapp">Try this Scan QR app now! https://play.google.com/store/apps/</string>
    <string name="ok">OK</string>
    <string name="givefeeeback">Give us feedbacks\nto get better experience</string>
    <string name="not_allow">Don\'t Allow</string>
    <string name="giverating">It\'s time to vote for QRScan on the Play Store</string>
    <string name="giveratingonchplay">Rating on CHPlay</string>
    <string name="askdelete">Do you really want to\ndelete these elements?</string>
    <string name="deletesub">This cannot be undone.</string>
    <string name="not_save">If you leave before saving, your code will be lost.</string>
    <string name="notsavesub">This cannot be undone.</string>
    <string name="numberfileselect">File Select</string>
    <string name="error">This field cannot be left empty</string>
    <string name="on_flash">The flash has been turned on.</string>
    <string name="off_flash">The flash has been turned off.</string>
    <string name="no_qr">No QR code found in the image.</string>
</resources>