<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="view.OnBoardFragment1">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >


      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/scan"
          android:layout_marginHorizontal="100dp"
          android:layout_marginTop="114dp"
         app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/onboard1title"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="@id/imageView2"
          android:layout_marginTop="67dp"
          android:fontFamily="@font/poppin_family"

          android:textSize="18dp"
          android:id="@+id/title"
          app:layout_constraintTop_toBottomOf="@+id/imageView2"
          />

      <TextView
          android:id="@+id/textView"
          android:layout_width="240dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="-22dp"
          android:layout_marginTop="6dp"
          android:text="@string/onboard1subtitle"
          android:textAlignment="center"
          android:textColor="@color/subtitle"
          android:fontFamily="@font/poppin_family"
          android:textSize="14dp"
          app:layout_constraintStart_toStartOf="@id/imageView2"
          app:layout_constraintTop_toBottomOf="@+id/title" />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/dot_onboard1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="@dimen/_130sdp"
          app:layout_constraintTop_toBottomOf="@+id/title" />

      <TextView
          android:id="@+id/skip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginStart="24dp"
          android:text="@string/skip"
          app:layout_constraintBottom_toBottomOf="@+id/imageView3"
          android:fontFamily="@font/poppin_family"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/imageView3" />

      <TextView
          android:id="@+id/next"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppin_family"

          android:layout_marginEnd="24dp"
          android:text="@string/next"
          android:textColor="@color/base"
          app:layout_constraintBottom_toBottomOf="@+id/imageView3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/imageView3" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>