<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/base"
    android:layout_height="match_parent"
    tools:context=".view.ResultFragment">
    <ImageView
        android:layout_width="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="@dimen/_24sdp"
        android:id="@+id/btnback"
        android:layout_marginStart="@dimen/_24sdp"
        android:src="@drawable/btnback"
        android:elevation="@dimen/_2sdp"
        android:layout_marginTop="29dp"


        />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/create"
        android:textStyle="bold"
        android:id="@+id/create"
        android:background="@color/base"
        android:textColor="@color/white"
        android:textSize="18sp"

        android:paddingTop="29dp"

        android:gravity="center_horizontal"
        android:layout_height="78dp"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:background="@color/white"
        android:layout_marginHorizontal="@dimen/_36sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/create"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"

            android:layout_marginStart="30dp"
            android:layout_height="50dp"

            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imagetitle"
                android:src="@drawable/text"



                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:id="@+id/title"
                    android:text="@string/text"
                    android:fontFamily="@font/poppin_family"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:textColor="@color/black"


                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle"
                    android:fontFamily="@font/poppin_family"
                    android:text="@string/example"
                    android:textColor="#B4B7CC"
                    android:textSize="12dp"


                    />

            </LinearLayout>


        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"

                android:id="@+id/recyclerviewhistoryscan"
                android:layout_marginHorizontal="30dp"

                android:layout_marginBottom="80dp"

                android:layout_gravity="center_horizontal|top"

                />





        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action"
                    android:fontFamily="@font/poppin_family"
                    android:gravity="center"
                    android:id="@+id/action"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/base"
                    android:textStyle="bold"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#E0E0E0"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppin_family"
                    android:text="@string/share"
                    android:gravity="center"

                    android:id="@+id/share"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/base"
                    android:textStyle="bold"
                    />



            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </com.google.android.material.card.MaterialCardView>







</androidx.constraintlayout.widget.ConstraintLayout>