<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
   >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="15dp"
        app:strokeColor="#DCDCF0"
        app:strokeWidth="1dp"

        >


        <ImageView
            android:id="@+id/image"
            android:layout_width="170dp"
            android:layout_height="134dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/image_not_save" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_save"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppin_family"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="170dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notsavesub"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppin_family"
            android:textSize="13sp"

            android:textColor="#B4B7CC"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="220dp"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:fontFamily="@font/poppin_family"

                android:maxLines="2"
                android:textColor="#3C52F5"

                />
            <View android:layout_height="match_parent"
                android:layout_width="1dp"
                android:background="#DCDCF0"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:maxLines="2"
                android:gravity="center"
                android:fontFamily="@font/poppin_family"

                android:textSize="17sp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:textColor="@color/base"

                />



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>